# FossSweeper

./: .clang-format  .gitignore  .markdownlint.yaml  CMakeLists.txt  CONTRIBUTING.md  CREDITS  README.md  REUSE.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  build_problem.yml  config.yml
.github/workflows/: REUSE Compliance.yaml  Release.yaml  Tests.yaml
CMake/: embed_string.CMake  get_short_hash.CMake  hash_check.CMake
assets/: README.md
modules/: CMakeLists.txt
modules/desktop_view/: .gitignore  CMakeLists.txt
modules/desktop_view/rc/: CMakeLists.txt  fosssweeper.desktop.in  fosssweeper.desktop.in.license
modules/desktop_view/src/: AboutDialog.cpp  AboutDialog.hpp  CMakeLists.txt  ConfigDialog.cpp  ConfigDialog.hpp  DesktopApp.cpp  DesktopApp.hpp  DesktopTimer.cpp  DesktopTimer.hpp  (+36 more)
modules/model/: CMakeLists.txt
modules/model/include/fosssweeper/: button.hpp  button_position.hpp  button_state.hpp  desktop_model.hpp  game_configuration.hpp  game_difficulty.hpp  game_model.hpp  game_state.hpp  lcd_digit.hpp  lcd_number.hpp  point.hpp  sprite.hpp  timer.hpp
modules/model/include/fsweep/: Button.hpp  ButtonPosition.hpp  ButtonState.hpp  DesktopModel.hpp  GameConfiguration.hpp  GameDifficulty.hpp  GameModel.hpp  GameState.hpp  LcdDigit.hpp  LcdNumber.hpp  Point.hpp  Sprite.hpp  Timer.hpp
modules/model/src/: Button.cpp  CMakeLists.txt  DesktopModel.cpp  GameConfiguration.cpp  LcdNumber.cpp  button.cpp  desktop_model.cpp  game_configuration.cpp  game_model.cpp  lcd_number.cpp  sprite.cpp
modules/test/: CMakeLists.txt
(+9 files in other folders)
